--- a/vtr-ui/src/app/components/pages/page-creator-centre/children/subpage-color-calibration/subpage-color-calibration.component.scss
+++ b/vtr-ui/src/app/components/pages/page-creator-centre/children/subpage-color-calibration/subpage-color-calibration.component.scss
@@ -180,7 +180,7 @@
 		min-height: calc(-31.5rem + 100vh);
 
 		.card-content {
-			margin-top: -8.5rem;
+			margin-top: -8rem;
 			@media #{$breakpoint_lg} {
 				margin-top: -0.5rem;
 			}
